<resources>
    <string name="lw_app_name">减肥健身操</string>

    <string name="lw_navigation_drawer_open">打开侧滑菜单</string>
    <string name="lw_navigation_drawer_close">关闭侧滑菜单</string>

    <string name="lw_action_settings">设置</string>

    <string name="lw_app_bar_title">@string/lw_app_name</string>
    <string name="lw_menu_training_plans">训练计划</string>
    <string name="lw_menu_report">报告</string>
    <string name="lw_menu_reminder">提醒</string>
    <string name="lw_menu_setting">设置</string>
    <string name="lw_menu_restart_progress">重置进度</string>
    <string name="lw_open">打开</string>
    <string name="lw_close">关闭</string>
    <string name="lw_tab_tourines">每日训练</string>
    <string name="lw_tab_30days">训练计划</string>
    <string name="lw_tab_reports">历史记录</string>
    <string name="lw_hello_blank_fragment">Hello blank fragment</string>
    <string name="lw_left_time">剩余时间</string>
    <string name="lw_percent">0.0%</string>
    <string name="lw_keep_data_in_cloud">保存数据到云账户</string>
    <string name="lw_never_backed_up">从未同步</string>
    <string name="lw_workouts">运动</string>
    <string name="lw_kcal">卡路里</string>
    <string name="lw_duration">时长</string>
    <string name="lw_history">历史</string>
    <string name="lw_records">记录</string>
    <string name="lw_current">当前体重：</string>
    <string name="lw_heaviest">最重体重：</string>
    <string name="lw_lightest">最轻体重：</string>
    <string name="lw_bmi">BMI(kg/m^2)</string>
    <string name="lw_edit">编辑</string>
    <string name="lw_height">身高</string>
    <string name="lw_weight">体重</string>

    <string name="lw_action_name">蹲伏</string>
    <string name="lw_action_desc_1">双脚与肩同宽, 双肩向前伸直，然后身体下压，直至与大腿与地面平行</string>
    <string name="lw_action_desc_2">膝盖方向应与脚尖方向保持一致</string>
    <string name="lw_video">视频</string>
    <string name="lw_next_action">下一个</string>
    <string name="lw_next_desc">跪姿屈膝抬腿-左</string>
    <string name="lw_skip">跳过</string>
    <string name="lw_today">今日</string>
    <string name="lw_finish_1">第1天 完成</string>
    <string name="lw_calorie"><u>卡路里</u></string>
    <string name="lw_time">时间</string>
    <string name="lw_click_here"><u>点击此处</u></string>
    <string name="lw_train">锻炼</string>
    <string name="lw_action_finish_duration">时长</string>
    <string name="lw_remind">提醒</string>
    <string name="lw_save">保存</string>
    <string name="lw_share">分享</string>
    <string name="lw_action_finish_weight">体重</string>
    <string name="lw_unit_kg">kg</string>
    <string name="lw_unit_lb">lb</string>
    <string name="lw_action_finish_bmi">BMI(kg/m^2)</string>
    <string name="lw_hide">隐藏</string>
    <string name="lw_click_input_height">点击这里输入您的身高数据</string>
    <string name="lw_sync_google_fit">同步到Google健身</string>
    <string name="lw_i_feel">我感觉</string>
    <string name="lw_simple">简单</string>
    <string name="lw_tired">筋疲力尽</string>
    <string name="lw_feedback">反馈</string>
    <string name="lw_ready">准备</string>
    <string name="lw_let_us_train_every_day">让我们每天坚持锻炼吧!</string>
    <string name="lw_finish">完成</string>
    <string name="lw_exit">退出</string>
    <string name="lw_delay">延时</string>
    <string name="lw_dialog_exit_tips">挥洒的汗水都是燃烧的脂肪</string>
    <string name="lw_comeback">30分钟后回来</string>
    <string name="lw_start">开始</string>

    <!-- BIMVIEW -->
    <string name="lw_SEVERELY_UNDERWEIGHT"> 严重偏瘦</string>
    <string name="lw_UNDERWEIGHT">偏瘦</string>
    <string name="lw_NORMAL">正常</string>
    <string name="lw_OVERWEIGHT">超重</string>
    <string name="lw_OBESE_CLASS_1">中度超重</string>
    <string name="lw_OBESE_CLASS_2">严重超重</string>
    <string name="lw_OBESE_CLASS_3">极度超重</string>


    <string name="lw_cancel">取消</string>
    <string name="lw_reminder">提醒</string>
    <string name="lw_repeat">重复</string>
    <string name="lw_settings">设置</string>
    <string name="lw_account">账号</string>
    <string name="lw_sound_options">声音选项</string>
    <string name="lw_workout">运动</string>
    <string name="lw_test_voice">语音测试</string>
    <string name="lw_voice_options_tts">语音选项(TTS)</string>
    <string name="lw_select_tts_engine">选择TTS引擎</string>
    <string name="lw_download_tts_engine">下载TTS引擎</string>
    <string name="lw_download_more_tts_language_data">下载更多的TTS语言数据</string>
    <string name="lw_device_tts_setting">设备的TTS设置</string>
    <string name="lw_voice_dialog_title">你能听到语音测试吗？</string>
    <string name="lw_voice_dialog_can">能</string>
    <string name="lw_voice_dialog_cant">不能</string>
    <string name="lw_tts_tset">你能听到语音测试吗</string>
    <string name="lw_tts_tips">你正在使用的TTS引擎已停止工作，请仔细检查或更换TTS引擎或下载TTS语音</string>
    <string name="lw_down_tts">下载TTS引擎</string>
    <string name="lw_set_tts">设置TTS引擎</string>
    <string name="lw_sure">确定</string>

    <string name="lw_show">显示</string>
    <string name="lw_rest">您的身体和肌肉需要休息一下</string>
    <string name="lw_end">结束</string>
    <string name="lw_gender">性别</string>
    <string name="lw_male">男性</string>
    <string name="lw_female">女性</string>
    <string name="lw_birth_year">出生年份</string>
    <string name="lw_previous">上一个</string>
    <string name="lw_unit_cm">cm</string>
    <string name="lw_unit_in">in</string>
    <string name="lw_general_settings">一般设置</string>
    <string name="lw_health_data">健康数据</string>
    <string name="lw_settings_reminder">提醒我每天锻炼</string>
    <string name="lw_delete_all_data">删除所有数据</string>
    <string name="lw_support_us">支持我们</string>
    <string name="lw_share_with_friends">与朋友分享</string>
    <string name="lw_private_policy">隐私政策</string>
    <string name="lw_version">版本 %s</string>
    <string name="lw_mute">静音</string>
    <string name="lw_coach_tips">训练提示</string>
    <string name="lw_voice_guide">语音</string>
    <string name="lw_ok">确定</string>

    <string name="lw_next">下一个</string>
    <string name="lw_day">天</string>
    <string name="lw_day_left">剩余</string>
    <string name="lw_morning_train">晨间拉伸</string>
    <string name="lw_ready_start">预备开始</string>

    <string name="lw_please_input_weight_height">请输入体重和身高</string>
    <string name="lw_morning_stretch">晨间拉伸</string>
    <string name="lw_sleep_stretch">晚间拉伸</string>
    <string name="lw_routine_exercise">运动</string>
    <string name="lw_routine_duration">时长</string>
    <string name="lw_routine_kcal">千卡</string>
    <string name="lw_birthday">出生日期</string>
    <string name="lw_weight_unit">体重单位</string>
    <string name="lw_height_unit">身高单位</string>
    <string name="lw_unit_setting">公制-英制单位</string>

    <string name="lw_chinese">简体中文</string>
    <string name="lw_english">English</string>
    <string name="lw_language_select">语言选择</string>
    <string name="lw_share_to">分享到</string>
    <string name="lw_share_text_1">我正在用30天内减肥 健身，锻炼效果很棒。</string>
    <string name="lw_share_text_2">你可以选择不同难度的全身，腿部，臀部以及腹部运动，无需任何器材。快来挑战吧!</string>
    <string name="lw_share_text_3">点击下载:</string>
    <string name="lw_share_text_4">https:</string>

    <string name="lw_monday">星期一</string>
    <string name="lw_tuesday">星期二</string>
    <string name="lw_wednesday">星期三</string>
    <string name="lw_thursday">星期四</string>
    <string name="lw_friday">星期五</string>
    <string name="lw_saturday">星期六</string>
    <string name="lw_sunday">星期日</string>

    <string name="lw_reset_schedule">重置进度?</string>
    <string name="lw_time_to_action">运动时间到了.</string>

    <string name="lw_height_not_allow">身高不合法，请重新输入</string>
    <string name="weight_not_allow">体重不合法，请重新输入</string>
    <string name="last_sync">上次同步</string>
    <string name="already_exit_google_fit">已退出GoogleFit</string>
    <string name="lw_sync">同步</string>
    <string name="lw_sync_complete">同步完成</string>

    <string name="lw_feed_back_subject">您的建议</string>
    <string name="lw_feed_back_content">我们很希望能得到您的建议：</string>
    <string name="lw_select_mail_app">请选择邮件类应用</string>
    <string name="lw_has_not_google_service">没安装谷歌服务</string>

    <string name="lw_train_detail">%s 个动作，已经完成 %s 个</string>
    <string name="lw_share_content">【%s】这个应用很不错，推荐一下。获取地址\n%s</string>
</resources>
