<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/plans"
            android:icon="@drawable/lw_ic_drawer_schedule"
            android:title="@string/lw_menu_training_plans"/>
        <item
            android:id="@+id/report"
            android:icon="@drawable/lw_ic_drawer_report"
            android:title="@string/lw_menu_report"/>
        <item
            android:id="@+id/reminder"
            android:icon="@drawable/lw_ic_drawer_reminder"
            android:title="@string/lw_menu_reminder"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/lw_ic_drawer_setting"
            android:title="@string/lw_menu_setting"/>
        <item
            android:id="@+id/reset_schedule"
            android:icon="@drawable/lw_ic_drawer_reset"
            android:title="@string/lw_menu_restart_progress"/>
    </group>
</menu>
