<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:paddingLeft="20dp"
        android:textColor="@color/lw_green_16"
        android:text="@string/lw_general_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        style="@style/lw_setting_item_tv_style"
        android:id="@+id/id_fg_setting_tv_health_data"
        android:drawableLeft="@drawable/lw_icon_24"
        android:text="@string/lw_health_data"/>
    <TextView
        style="@style/lw_setting_item_tv_style"
        android:id="@+id/id_fg_setting_tv_reminder"
        android:drawableLeft="@drawable/lw_icon_11"
        android:text="@string/lw_settings_reminder" />
    <TextView
        style="@style/lw_setting_item_tv_style"
        android:id="@+id/id_fg_setting_tv_unit_setting"
        android:drawableLeft="@drawable/lw_ic_metric"
        android:text="@string/lw_unit_setting" />
    <TextView
        style="@style/lw_setting_item_tv_style"
        android:id="@+id/id_fg_setting_tv_language_setting_setting"
        android:drawableLeft="@drawable/lw_ic_global"
        android:text="@string/lw_language_select" />
    <TextView
        style="@style/lw_setting_item_tv_style"
        android:id="@+id/id_fg_setting_tv_delete_all_data"
        android:drawableLeft="@drawable/lw_ic_delete_48px"
        android:text="@string/lw_delete_all_data"/>
</LinearLayout>
