<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:paddingLeft="20dp"
        android:textColor="@color/lw_green_16"
        android:text="@string/lw_support_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/id_fg_setting_tv_rate_us"
        android:background="?android:selectableItemBackground"
        android:paddingLeft="20dp"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/lw_icon_21"
        android:textColor="@color/lw_black_00"
        android:text="Rate us"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="gone"/>
    <TextView
        android:id="@+id/id_fg_setting_tv_share"
        style="@style/lw_setting_item_tv_style"
        android:drawableLeft="@drawable/lw_icon_23"
        android:text="@string/lw_share_with_friends"/>
    <TextView
        android:id="@+id/id_fg_setting_tv_feedback"
        android:background="?android:selectableItemBackground"
        android:paddingLeft="20dp"
        android:drawablePadding="30dp"
        android:gravity="center_vertical"
        android:drawableLeft="@drawable/lw_icon_22"
        android:textColor="@color/lw_black_00"
        android:text="@string/lw_feedback"
        android:layout_width="match_parent"
        android:layout_height="50dp" />
</LinearLayout>
