<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/id_dialog_sync_iv_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:src="@drawable/lw_ic_close"
        android:layout_alignParentRight="true"/>

    <ImageView
        android:id="@+id/id_dialog_sync_iv_cloud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/lw_ic_sync_cloud"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"/>

    <TextView
    android:id="@+id/id_dialog_sync_tv_account"
    style="@style/lw_centerTextView"
    android:text="Account Name"
    android:layout_below="@id/id_dialog_sync_iv_cloud"/>

    <TextView
        android:id="@+id/id_dialog_sync_tv_last_sync"
        style="@style/lw_centerTextView"
        android:text="@string/last_sync"
        android:layout_below="@id/id_dialog_sync_tv_account"/>

    <TextView
        android:id="@+id/id_dialog_sync_tv_last_sync_time"
        style="@style/lw_centerTextView"
        android:text="Today 10:00"
        android:textColor="@color/lw_green_16"
        android:layout_below="@id/id_dialog_sync_tv_last_sync"/>

    <Button
        android:id="@+id/id_dialog_sync_btn_sync"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/lw_sync"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/id_dialog_sync_tv_last_sync_time"
        android:background="@color/lw_green_16"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/id_dialog_sync_tv_exit"
        style="@style/lw_centerTextView"
        android:text="@string/lw_exit"
        android:textColor="@color/lw_gray"
        android:layout_below="@id/id_dialog_sync_btn_sync"
        android:layout_marginTop="20dp"
        android:padding="10dp"/>

</RelativeLayout>